src/app/webex-layout/space-details/space-details.component.scss
.main-content{
  min-height: 100vh;
  max-height: 100vh;
  margin-left: 250px;
  overflow: hidden;
}
.topnav-header{
  padding: 15px;
  display: flex;
  min-height: 10vh;
  max-height: 10vh;
  background-color: #7f53ac;
    background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
}
.space-name-avatar{
  display: flex;
}
.space-name {
  margin-left: 10px;
  font-size: large;
  color: white;
  padding-top: 7px;
}
.space-icons {
  padding-top: 7px;
  text-align: right;
  color: #fff;
}
.message {
  font-size: 14px;
  padding: 10px;
}
.message-body {
  height: 77vh;
  overflow-y: scroll;
  display: flex;
  flex-direction: column-reverse;
}
.send-message {
  height: 10vh;
}
.noscroll {
  overflow: hidden;
}

li {
  list-style-type: none;
  margin: 2px 0;
  padding: 2px 10px;
  color:white;
  font-size: medium;
}
.him {
  float: left;
  white-space:pre-wrap;
  border-radius: 1rem;
  background-color: #7f53ac;
  background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
  margin-bottom: 0px;
}
.chat-avatar{
  min-width: 45px;
}
textarea {
  resize: none;
}
.sendColor{
  background-color: #7f53ac;
  background-image: linear-gradient(315deg, #7f53ac 0%, #647dee 74%);
}

